--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -10,64 +10,64 @@ section:
 
 # Your experiences
 experiences:
-- company:
-    name: Example Co.
-    url: "https://www.example.com"
-    location: Dhaka Branch
-    logo: /images/sections/experiences/company1.jpg
-    # Can optionally show a different logo for dark theme
-    # darkLogo: /images/sections/experiences/company1.jpg
-    # company overview
-    overview: Example Co. is a widely recognized company for cloud-native development. It builds tools for Kubernetes.
-  positions:
-  - designation: Senior Software Engineer
-    start: Nov 2019
-    # don't provide end date if you are currently working there. It will be replaced by "Present"
-    # end: Dec 2020
-    # give some points about what was your responsibilities at the company.
-    responsibilities:
-    - Design and develop XYZ tool for ABC task
-    - Design, develop and manage disaster recovery tool [Xtool](https://www.example.com) that backup Kubernetes volumes, databases, and cluster's resource definition.
-    - Lead backend team.
-
-  - designation: Junior Software Engineer
-    start: Nov 2017
-    end: Oct 2019
-    responsibilities:
-    - Implement and test xyz feature for abc tool.
-    - Support client for abc tool.
-    - Learn k,d,w technology for xyz.
+# - company:
+#     name: Impact Sports
+#    url: "https://www.example.com"
+#    location: Cornelius, OR, United States
+#     logo: /images/sections/experiences/company1.jpg
+#     # Can optionally show a different logo for dark theme
+#     # darkLogo: /images/sections/experiences/company1.jpg
+#     # company overview
+#     overview: Example Co. is a widely recognized company for cloud-native development. It builds tools for Kubernetes.
+#   positions:
+#   - designation: Consultant
+#     start: Oct 2024
+#     # don't provide end date if you are currently working there. It will be replaced by "Present"
+#     # end: Dec 2020
+#     # give some points about what was your responsibilities at the company.
+#     responsibilities:
+#     - Design and develop high resolution pressure mat for golf simulator
+#     - Design, develop and manage GUI applications and CoP(Center of Pressure) algorithms.
+#     - Lead R&D team.
 
 - company:
-    name: PreExample Co.
-    url: "https://www.example.com"
-    location: Nowhere
-    logo: /images/sections/experiences/company2.jpg
+    name: DTV Motor Corporation
+    url: "https://dtvmotorcorp.com"
+    location: Mississauga, ON, Canada
+    logo: /images/sections/experiences/dtv.jpg
     # Can optionally show a different logo for dark theme
     # darkLogo: /images/sections/experiences/company2.jpg
-    overview: PreExample Co. is a gateway company to enter into Example co. So, nothing special here.
+    overview: DTV Motor Corporation is a Canadian company that specializes in the development and manufacturing of Dual Tracked Vehicles (DTV), an all-terrain also known as "Shredder" vehicles. 
   positions:
-  - designation: Software Engineer
-    start: March 2016
-    end: May 2017
+  - designation: Consultant
+    start: Sep 2024
+    # end: Dec 2024
     responsibilities:
-    - Write lots of example codes.
-    - Read lots of examples.
-    - See lots of example videos.
-
+    - Construct a simulation environment based on ROS2 and Gazebo.
+    - Optimize the smoothness of steering transition of the dual track system, reducing instability by 60%.
+    - Design and refined a joystick‑controlled remote system to enhance product demonstrations and usability.
+  
+  - designation: Control System Engineer Intern
+    start: May 2021
+    end: Dec 2021
+    responsibilities:
+    - Redesigned the control system architecture using the CAN bus protocol, significantly improving communication reliability. Reduced total vehicle parts costs by 4%.
+    - Solved dual‑track steering control challenges using PID and MPC algorithms, improving maneuverability.
+    - Developed and tuned an EKF for real‑time environmental noise suppression, reducing noise interference by 35%.
+    
 - company:
-    name: Intern Counting Company (ICC).
-    url: "https://www.example.com"
-    location: Intern Land
-    logo: /images/sections/experiences/company3.jpg
+    name: Neusoft Cloud
+    url: "https://www.neusoft.com"
+    location: Liaoning, China
+    logo: /images/sections/experiences/neusoft.png
     # Can optionally show a different logo for dark theme
     # darkLogo: /images/sections/experiences/company3.jpg
-    overview: Intern counting Company (ICC) is responsible for counting worldwide intern Engineers.
+    overview: Neusoft Cloud, a division of Neusoft Corporation, provides cloud computing services, including infrastructure, SaaS, and big data analytics. Focused on industries like healthcare, finance, and manufacturing, Neusoft Cloud helps businesses modernize IT systems and enhance digital capabilities.
   positions:
-  - designation: Intern
-    start: Jun 2015
-    end: Jan 2016
+  - designation: Software Engineer Intern 
+    start: May 2019
+    end: Sep 2019
     responsibilities:
-    - Count lost of interns.
-    - Count more interns.
-    - Count me as an intern.
+    - Took part in the web development regarding human resources.
+    - Coded back-end logic and data processing using Java and SQL and front-end appearance using HTML.
+    - Thoroughly learnt the mechanism of the web framework Spring MVC.
