--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -18,48 +18,163 @@ buttons:
   filter: "academic"
 - name: Hobby
   filter: "hobby"
+  
+- name: DTV
+  filter: "dtv"
+- name: ROS
+  filter: "ros"
+- name: Quadrotor
+  filter: "quadrotor"
+- name: Astronomy
+  filter: "astronomy"
 
 # your projects
+# projects:
+# - name: Autonomous Tracked Vehicle with Multi-Modal Perception and Control.
+#   # logo: /images/sections/projects/tensorflow.png
+#   role: Team Lead
+#   timeline: "Jan 2025 - Present"
+#   # repo: https://github.com/tensorflow/tensorflow
+#   #url: ""
+#   summary: Led the development of an autonomous system consisting of the following submodules.
+# 1. Vehicle Platform & Control (ROS2)
+# 2. Safety & Sensing (ultrasonic stop system)
+# 3. Vision (YOLO person detection on Jetson)
+# 4. Localization & Tracking (UWB following)
+# 5. Natural Language Interface (LLM command parsing)
+#   tags: ["professional", "dtv"]
+
 projects:
-- name: Kubernetes
-  logo: /images/sections/projects/kubernetes.png
-  role: Contributor
-  timeline: "March 2018 - Present"
-  repo: https://github.com/kubernetes/kubernetes # If your project is a public repo on GitHub, then provide this link. it will show star count.
-  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Production-Grade Container Scheduling and Management.
-  tags: ["professional", "kubernetes", "cloud"]
-
-- name: Tensorflow
-  logo: /images/sections/projects/tensorflow.png
+- name: Harmonic Equatorial Mount
+  # logo: /images/sections/projects/tensorflow.png
   role: Developer
-  timeline: "Jun 2018 - Present"
-  repo: https://github.com/tensorflow/tensorflow
+  timeline: "May 2025 - Sep 2025"
+  # repo: https://github.com/tensorflow/tensorflow
   #url: ""
-  summary: An Open Source Machine Learning Framework for Everyone.
-  tags: ["professional", "machine-learning"]
+  summary: Built a heavy-duty equatorial mount for astronomical observation using step motor, planetary gearbox, and harmonic drive. 
+  tags: ["hobby"]
 
-- name: A sample academic paper
+projects:
+- name: DTV Shredder Safety & Obstacle Avoidance System
+  # logo: /images/sections/projects/tensorflow.png
+  role: Developer
+  timeline: "Apr 2025 - May 2025"
+  # repo: https://github.com/tensorflow/tensorflow
+  #url: ""
+  summary: Integrated ultrasonic sensors to provide collision avoidance. The system monitors surroundings and automatically stops the vehicle when obstacles are detected nearby.
+  tags: ["professional", "dtv"]
+  
+projects:
+- name: DTV Shredder Vision-Based Person Recognition 
+  # logo: /images/sections/projects/tensorflow.png
+  role: Developer
+  timeline: "Jul 2025 - Aug 2025"
+  # repo: https://github.com/tensorflow/tensorflow
+  #url: ""
+  summary: Deployed a YOLO model on the Jetson Orin NX to recognize and track people in real time. Enabled the vehicle to identify and react to human presence.
+  tags: ["professional", "dtv"]
+  
+projects:
+- name: DTV Shredder Tracking & Following System
+  # logo: /images/sections/projects/tensorflow.png
+  role: Developer
+  timeline: "Aug 2025 - Present"
+  # repo: https://github.com/tensorflow/tensorflow
+  #url: ""
+  summary: mplemented a UWB positioning system to locate and follow a designated person. Combined with control logic, the vehicle can autonomously trail a target.
+  tags: ["professional", "dtv"]
+  
+projects:
+- name: DTV Shredder Natural Language Command Interface
+  # logo: /images/sections/projects/tensorflow.png
+  role: Developer
+  timeline: "Aug 2025 - Present"
+  # repo: https://github.com/tensorflow/tensorflow
+  #url: ""
+  summary: Ran a quantized language model on the Jetson Orin NX to parse spoken or written user commands. Enabled intuitive communication between user and robot by translating words into actionable tasks.
+  tags: ["professional", "dtv"]
+
+projects:
+- name: DTV Shredder Remote Controller
+  # logo: /images/sections/projects/tensorflow.png
+  role: Developer
+  timeline: "Nov 2024 - Present"
+  # repo: https://github.com/tensorflow/tensorflow
+  #url: ""
+  summary: A joystick-based remote controller is designed for the DTV Shredder to enable precise control. Additionally, a showcase routine was created to demonstrate the shredder's maneuverability.
+  tags: ["professional", "dtv"]
+  
+- name: Pressure Measuring System for Golf Simulator
   role: Team Lead
-  timeline: "Jan 2017 - Nov 2017"
-  url: "https://www.example.com"
-  summary: Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eius reprehenderit animi suscipit autem eligendi esse amet aliquid error eum. Accusantium distinctio soluta aliquid quas placeat modi suscipit eligendi nisi.
-  tags: ["academic","iot"]
+  timeline: "Oct 2024 - Jun 2025"
+  # url: "https://www.example.com"
+  summary: This project involves a pressure mat that captures weight distribution to calculate center of weight movement, analyzing golf swing quality for training. It provides feedback on posture, balance, and movement to help golfers improve technique and performance. 
+  tags: ["hobby"]
+  
+- name: Golf Putting Sensor
+  role: Team Lead
+  timeline: "Sep 2025 - Present"
+  # url: "https://www.example.com"
+  summary: This project involves a MPU6050, a RP2040 dev board and a LED matrix board. An algorithm was developed to detect the speed and acceleration of a golf club for putting exercise.
+  tags: ["hobby"]
+  
+- name: UR5 Robot Arm Pick & Place
+  # logo: /images/sections/projects/kubernetes.png
+  role: Developer
+  timeline: "Aug 2024 - Oct 2024"
+  # repo: https://github.com/kubernetes/kubernetes # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary: Use ROS2 and Gazebo to simulate an UR5 robot arm to complete a pick & place task.
+  tags: ["hobby", "ros"]
+  
+- name: DTV Simulator
+  # logo: /images/sections/projects/kubernetes.png
+  role: Developer
+  timeline: "Aug 2024 - Oct 2024"
+  # repo: https://github.com/kubernetes/kubernetes # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary: A DTV Shredder simulator was designed using ROS2 and Gazebo. 
+  tags: ["hobby", "dtv", "ros"]
+  
+- name: DTV Shredder Steering System
+  # logo: /images/sections/projects/kubernetes.png
+  role: Developer
+  timeline: "May 2021 - Aug 2021"
+  # repo: https://github.com/kubernetes/kubernetes # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary: This project involved designing the steering control system for the DTV Shredder. Advanced mathematical algorithms, such as PID and Model Predictive Control (MPC), were implemented to address steering challenges specific to tracked vehicles. An Extended Kalman Filter (EKF) was also applied in signal processing to effectively filter out environmental noise, enhancing control precision and system reliability.
+  tags: ["professional", "dtv"]
 
-- name: Nocode
-  logo: /images/sections/projects/no-code.png
-  role: Nothing
-  timeline: "Oct 2019 - Dec 2019"
-  repo: https://github.com/kelseyhightower/nocode
+- name: Reach‑Avoid Control Synthesis for a Quadrotor UAV
+  role: Team Lead
+  timeline: "Sep 2023 - Apr 2024"
+  url: "https://www.youtube.com/watch?v=wMMqXJsCATg"
+  summary: A framework was designed to create a safe trajectory for UAVs to reach targets in complex environments, avoiding obstacles while meeting velocity and thrust constraints. It combined geometric controller for precise tracking with Bézier curve-based trajectory generation, incorporating tracking errors.
+  tags: ["academic", "quadrotor"]
+
+- name: Signal Temporal Logic Motion Planning for Quadrotor
+  # logo: /images/sections/projects/no-code.png
+  role: Team Lead
+  timeline: "Mar 2023 - Aug 2023"
+  # repo: https://github.com/kelseyhightower/nocode
   #url: ""
-  summary: The best way to write secure and reliable applications. Write nothing; deploy nowhere.
-  tags: ["hobby", "fun"]
+  summary: A framework was constructed for robust quadrotor reach-avoid tasks using signal temporal logic (STL) and geometric control theory. Mixed-integer convex programming (MICP) is used to satisfy STL specifications, producing smooth trajectories with robustness tubes. A Lyapunov-based geometric controller ensures the quadrotor follows the trajectory within the robustness tube. Simulations confirm the framework's effectiveness, and comparisons show it outperforms PID and nonlinear model predictive control (NMPC).
+  tags: ["academic", "quadrotor"]
 
-- name: Toha
-  logo: /images/sections/projects/toha.png
+- name: Geometric Control of a Quadrotor UAV on SE(3)
+  # logo: /images/sections/projects/toha.png
   image: /images/sections/projects/toha_website.png
   role: Owner
-  timeline: "Jun 2019 - Present"
-  repo: https://github.com/hossainemruz/toha
-  summary: A Hugo theme for personal portfolio.
-  tags: ["hobby","hugo","theme","professional"]
+  timeline: "Sep 2022 - Dec 2022"
+  # repo: https://github.com/hossainemruz/toha
+  summary: This projects introduces a tracking controller for a quadrotor using geometric control based on work by Lee et al. (2010). Leveraging SE(3) properties, this approach achieves a robust, coordinate-free control performance.
+  tags: ["academic", "quadrotor"]
+  
+- name: Optimal Control Formulation of Deep Neural Network
+  # logo: /images/sections/projects/toha.png
+  image: /images/sections/projects/toha_website.png
+  role: Owner
+  timeline: "Jan 2022 - Mar 2022"
+  url: "https://github.com/BerenChang/AMATH456_final_project"
+  summary: An Optimal control formulation of deep neural networks based on Li et al. (2018).
+  tags: ["academic"]
