--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -65,7 +65,7 @@ skills:
 - name: ROS / ROS2
   logo: /images/sections/skills/ros.png
   summary: "Expert in Robot OS for robotics development, including simulation, multi-sensor integration, and autonomous navigation."
-  categories: ["others"]
+  categories: ["simulation"]
   
 - name: OptiTrack
   logo: /images/sections/skills/motive.png
@@ -88,6 +88,6 @@ skills:
   categories: ["others"]
   
 - name: Unity
-  logo: /images/sections/skills/solidworks.png
+  logo: /images/sections/skills/unity.png
   summary: "Skilled in Unity application development. Developed a 2D matrix heatmap visualization program."
   categories: ["others"]
