--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -12,6 +12,9 @@ section:
 buttons:
 - name: All
   filter: "all"
+- name: Highlight
+  filter: "highlight"
+
 - name: Professional
   filter: "professional"
 - name: Academic
